--- a/style.css
+++ b/style.css
@@ -20,6 +20,22 @@ body {
     
 }
 
+#add-text-btn{
+    cursor: pointer;
+    margin: 10px;
+}
+
 #span-container span{
     color: green
+}
+
+#dynamic-text-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.p-sub-heading{
+    margin: 15px;
+    font-size: 35px;
 }
